force-app/main/default/objects/Licenses__c/Licenses__c.object-meta.xml
<CustomObject>
    <description>Professional Accrediations</description>
    <label>License</label>
    <nameField>
        <displayFormat>L-{000}</displayFormat>
        <label>License</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>