force-app/main/default/objects/Licenses__c/fields/Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Descriptions__c</fullName>
    <label>Descriptions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>