force-app/main/default/objects/Licenses__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concealed Weapons Permit</fullName>
            </value>
            <value>
                <fullName>Developer Certification</fullName>
            </value>
            <value>
                <fullName>Programming Certificate</fullName>
            </value>
            <value>
                <fullName>Medical License</fullName>
            </value>
            <value>
                <fullName>Medical Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>